# video_roi_picture_extraction

./: CMakeLists.txt  README.md
include/VideoPictureExtraction/: SeaVehiclesClassifier.h  video_picture_extraction.h
src/: main.cpp  sea_vehicles_classifier.cpp  video_picture_extraction.cpp
